//
// Copyright (c) 2025 Red Hat, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
// the License. You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
// an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
// specific language governing permissions and limitations under the License.
//

syntax = "proto3";

package private.v1;

import "private/v1/metadata_type.proto";

// Contains the details about the cluster that are available only for the system.
message Cluster {
  Metadata metadata = 1;

  // Identifier of the hub that was selected for this cluster.
  string hub_id = 2;

  // Identifier of the cluster order that was originally used to create this cluster.
  //
  // This is needed because the way to find the Kubernetes `ClusterOrder` object corresponding to this cluster is to
  // use the `.../clusterorder-uuid` label that was set when it was created, and that contains the identifier of the
  // cluster order because at that point there is no cluster yet.
  string order_id = 3;
}
